@@ -2,6 +2,8 @@ Version 1.5.1 - xx xxx 2010
 
   * Add librets-config-win for Windows. Ticket #138.
   * Properly parse failed login RETS Reply. Ticket #139.
+  * Add InKeyIndex() to MetadataTable and expose to SWIG.
+    Ticket #157.
 
 Version 1.5.0b1 - 22 Mar 2010
 
